--- a/views/partials/dispenser.pug
+++ b/views/partials/dispenser.pug
@@ -1,1 +1,27 @@
-p this is dispenser
+.dispenser
+	div(class='col-md-12 center')
+		h3 AntrianJS
+		div(class='col-md-3 col-centered')
+			div(class='panel panel-default')
+				.panel-heading
+					div(class='panel-title center')
+						h4 Dispenser
+				.panel-body
+					form
+						label(class='radio-inline')
+							input(type='radio' name='inlineRadioOption')
+							span npwp
+						label(class='radio-inline')
+							input(type='radio' name='inlineRadioOption')
+							span npwp
+						label(class='radio-inline')
+							input(type='radio' name='inlineRadioOption')
+							span npwp
+						
+						span(class='nomor-dispenser')
+							p 99999
+						button(class='btn btn-default') Ambil Nomor
+
+
+
+
