--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,16 +4,25 @@ html
 	head
 		title AntrianJS
 		link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.min.css')
+		link(rel='stylesheet', href='css/AntrianJS.css')
+		link(rel='stylesheet', href='css/font-awesome.min.css')
+		link(rel='stylesheet', href='bower_components/video.js/dist/video-js.min.css')
+		script(src='bower_components/video.js/dist/ie8/videojs-ie8.min.js')
 	body(ng-app="AntrianJS")
 		div
-			ng-view
-		
+			canvas(id='demo-canvas')
+			div(id='large-header' class='large-header')
+				ng-view
+
+		nav(class='navbar navbar-default navbar-fixed-bottom')
+			.container @mastoppink - Copy Left &copy2017 beta version
 		script(src='bower_components/jquery/dist/jquery.min.js')
 		script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')
 		script(src='bower_components/angular/angular.js')
 		script(src='bower_components/angular-route/angular-route.js')
 		script(src='bower_components/angular-resource/angular-resource.js')
 		script(src='bower_components/howler.js/dist/howler.min.js')
+		script(src='bower_components/video.js/dist/video.min.js')
 		script(src='/socket.io/socket.io.js')
 		script(src='js/app.js')
 		script(src='js/services.js')
@@ -22,5 +31,8 @@ html
 		script(src='js/controllers/loketCtrl.js')
 		script(src='js/controllers/dispenserCtrl.js')
 		script(src='js/controllers/welcomeCtrl.js')
-
+		script(src="js/TweenLite.min.js")
+		script(src="js/EasePack.min.js")
+		script(src="js/rAF.js")
+		script(src="js/muter-muter.js")
 
