--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,6 +23,7 @@ html
 		script(src='bower_components/angular-resource/angular-resource.js')
 		script(src='bower_components/howler.js/dist/howler.min.js')
 		script(src='bower_components/video.js/dist/video.min.js')
+		script(src='bower_components/vjs-video/dist/vjs-video.js')
 		script(src='/socket.io/socket.io.js')
 		script(src='js/app.js')
 		script(src='js/services.js')
