--- a/public/css/AntrianJS.css
+++ b/public/css/AntrianJS.css
@@ -6,11 +6,10 @@
 
 }
 .navbar > .container{
-	padding-top:15px;
+	padding-top:5px;
 	font-size: 11px;
+	margin-left: 0;
 }
-
-
 
 canvas {
 	position:absolute;
@@ -24,7 +23,14 @@ canvas {
 .welcome-form{
 	margin-top: 10px;
 }
-
+.navbar-nav > li > a, .navbar-brand {
+    padding-top:4px !important; 
+    padding-bottom:0 !important;
+    height: 28px;
+}
+.navbar {
+	min-height:28px !important;
+}
 body{
 	overflow-y: hidden;
 }
@@ -43,7 +49,49 @@ body{
     height: auto !important;
 }
 
+.table th {
+   text-align: center;   
+}
 
+.right{
+	text-align: right;
+}
+
+.font-bigger{
+	font-size: 12;
+	font-weight: bold;
+}
+
+.table-curved {
+    border-collapse: separate;
+}
+.table-curved {
+    border: solid #ccc 1px;
+    border-radius: 6px;
+    border-left:0px;
+}
+.table-curved td, .table-curved th {
+    border-left: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+}
+.table-curved th {
+    border-top: none;
+}
+.table-curved th:first-child {
+    border-radius: 6px 0 0 0;
+}
+.table-curved th:last-child {
+    border-radius: 0 6px 0 0;
+}
+.table-curved th:only-child{
+    border-radius: 6px 6px 0 0;
+}
+.table-curved tr:last-child td:first-child {
+    border-radius: 0 0 0 6px;
+}
+.table-curved tr:last-child td:last-child {
+    border-radius: 0 0 6px 0;
+}
 
 
 
