--- a/views/partials/admin.pug
+++ b/views/partials/admin.pug
@@ -1,1 +1,104 @@
-p this is admin
+.admin
+	.col-md-12
+		a(href='/' class='no-underline')
+			h3(class='center') AntrianJS
+		h5(class='center') Admin Panel
+		table(class='table table-bordered table-admin')
+			tr
+				th Loket 1
+				th Loket 2
+				th Loket 3
+				th Loket 4
+				th Loket 5
+				th Loket 6
+				th Loket 7
+				th Loket 8
+				th Loket 9
+				th Loket 10
+				th Loket 11
+				th Loket 12
+			tr
+				td
+					div(class='center') 
+						span 999
+					div(class='center')
+						span
+							i(class='fa fa-bullhorn')
+				td
+
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+
+		table(class='table table-bordered table-admin')
+			tr
+				th Loket 13
+				th Loket 14
+				th Loket 15
+				th Loket 16
+				th Loket 17
+				th Loket 18
+				th Loket 19
+				th Loket 20
+				th Loket 21
+				th Loket 22
+				th Loket 23
+				th Loket 24
+			tr
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				td
+				
+		.col-md-12
+			div(class='col-md-3')
+				div(class='panel panel-default')
+					.panel-heading
+						h4(class='center') Jenis Antrian
+					.panel-body
+						table(class='table table-bordered')
+							tr
+								th No
+								th Jenis Loket
+								th
+									i(class='fa fa-gear')
+							tr
+								td 1
+								td NPWP
+								td(class='center')
+									i(class='fa fa-trash')
+									i     
+									i(class='fa fa-pencil')
+									i    
+									i(class='fa fa-plus')
+			div(class='col-md-6')
+				div(class='panel panel-default')
+					.panel-heading
+						h4(class='center') Video
+					.panel-body
+
+			div(class='col-md-3')
+				div(class='panel panel-default')
+					.panel-heading
+						h4(class='center') Setting Umum
+					.panel-body
+						form
+							.form-group
+								label(for='judulTxt') Judul
+								input(type='input' class='form-control' id='judulTxt')
+							button(class='btn btn-default' ng-click='') Simpan
