--- a/views/partials/dispenser.pug
+++ b/views/partials/dispenser.pug
@@ -1,6 +1,7 @@
 .dispenser
 	div(class='col-md-12 center')
-		h3 AntrianJS
+		a(href='/' class='no-underline')
+			h3 AntrianJS
 		div(class='col-md-3 col-centered')
 			div(class='panel panel-default')
 				.panel-heading
@@ -10,17 +11,17 @@
 					form
 						label(class='radio-inline')
 							input(type='radio' name='inlineRadioOption')
-							span npwp
+							span NPWP
 						label(class='radio-inline')
 							input(type='radio' name='inlineRadioOption')
-							span npwp
+							span EFIN
 						label(class='radio-inline')
 							input(type='radio' name='inlineRadioOption')
-							span npwp
+							span EFILING
 						
 						span(class='nomor-dispenser')
 							p 99999
-						button(class='btn btn-default') Ambil Nomor
+						button(class='btn btn-primary btn-lg') Ambil Nomor
 
 
 
