--- a/views/partials/loket.pug
+++ b/views/partials/loket.pug
@@ -1,6 +1,7 @@
 .loket
 	div(class='col-md-12 center')
-		h3 AntrianJS
+		a(href='/' class='no-underline')
+			h3 AntrianJS
 		div(class='col-md-6 col-centered')
 			div(class='panel panel-default')
 				.panel-heading
