--- a/views/partials/monitor.pug
+++ b/views/partials/monitor.pug
@@ -2,7 +2,7 @@
 	nav(class='navbar navbar-default')
 		.container-fluid
 			.navbar-header
-				a(class='navbar-brand right') AntrianJS
+				a(class='navbar-brand right' href='/') AntrianJS
 	div(class='col-md-12')
 		.col-md-8
 			.thumbnail
@@ -14,33 +14,82 @@
 					th Loket
 					th Sedang dilayani
 				tr
-					td Loket 1
+					td 1
 					td(class='right font-bigger') 99
 				tr
-					td Loket 2
+					td 2
 					td(class='right font-bigger') 99
 				tr
-					td Loket 3
+					td 3
 					td(class='right font-bigger') 99
 				tr
-					td Loket 4
+					td 4
 					td(class='right font-bigger') 99
+				tr
+					td 5
+					td(class='right font-bigger') 99
+				tr
+					td 6
+					td(class='right font-bigger') 99
+				tr
+					td 7
+					td(class='right font-bigger') 99
+				tr
+					td 8
+					td(class='right font-bigger') 99
+				tr
+					td 9
+					td(class='right font-bigger') 99
+				tr
+					td 10
+					td(class='right font-bigger') 99
+				tr
+					td 11
+					td(class='right font-bigger') 99
+				tr
+					td 12
+					td(class='right font-bigger') 99
+
 		.col-md-2
 			table(class='table table-curved table-striped')
 				tr
 					th Loket
 					th Sedang dilayani
 				tr
-					td Loket 1
+					td 13
 					td(class='right font-bigger') 99
 				tr
-					td Loket 2
+					td 14
 					td(class='right font-bigger') 99
 				tr
-					td Loket 3
+					td 15
 					td(class='right font-bigger') 99
 				tr
-					td Loket 4
+					td 16
+					td(class='right font-bigger') 99
+				tr
+					td 17
+					td(class='right font-bigger') 99
+				tr
+					td 18
+					td(class='right font-bigger') 99
+				tr
+					td 19
+					td(class='right font-bigger') 99
+				tr
+					td 20
+					td(class='right font-bigger') 99
+				tr
+					td 21
+					td(class='right font-bigger') 99
+				tr
+					td 22
+					td(class='right font-bigger') 99
+				tr
+					td 23
+					td(class='right font-bigger') 99
+				tr
+					td 24
 					td(class='right font-bigger') 99
 
 
@@ -48,3 +97,5 @@
 	div(class='col-md-12 center')
 		.thumbnail
 			h2 SELAMAT DATANG DI KPP PRATAMA JAKARTA SETIABUDI DUA
+		.thumbnail
+			h3 NOMOR ANTRIAN {{antrian}} KE LOKET {{loket}}
